<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- hints -->
    <string name="email_hint">Email</string>
    <string name="mobile_hint">Mobile</string>
    <string name="password_hint">Password</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="gender_hint">Gender</string>

    <!-- sign in -->
    <string name="fb_login_text">Continue with Facebook</string>
    <string name="or">or</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_pass_text">Enter your email address and we will send you a link to reset your password</string>
    <string name="email_sent">Email was successfully sent</string>

    <!-- title -->
    <string name="title_sign_in">Sign in</string>
    <string name="title_forgot_pass">Forgot Password</string>
    <string name="title_sign_in_failed">Sign in Failed</string>

    <!-- errors -->
    <string name="facebook_error">Facebook user not found, please sign up first.</string>
    <string name="email_error">Please enter your email</string>
    <string name="mobile_error">Please enter your phone number</string>
    <string name="invalid_mobile_error">Invalid phone number</string>
    <string name="password_error">Password cannot be less that 6 characters</string>
    <string name="no_password_error">Please enter a password</string>
    <string name="no_email_error">You need an email to sign up</string>
    <string name="invalid_email_error">Please enter a valid email</string>

</resources>